# LLaMA-Omni2

./: README.md  pyproject.toml
examples/: questions.json
llama_omni2/: utils.py
llama_omni2/inference/: run_cosy2_decoder.py  run_llama_omni2.py
llama_omni2/model/: __init__.py  omni2_speech_arch.py
llama_omni2/model/language_model/: omni2_speech2s_qwen2.py  omni2_speech_qwen2.py
llama_omni2/model/speech_encoder/: speech_encoder.py
llama_omni2/model/speech_generator/: builder.py  generation.py  speech_generator.py
llama_omni2/model/speech_projector/: speech_projector.py
llama_omni2/serve/: controller.py  flow_inference.py  gradio_web_server.py  model_worker.py
